Fix logo table breaking on mobile homepage

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -28,7 +28,6 @@ html {
 
 .title {
     flex: auto;
-    min-width: 520px;
     max-width: 550px;
 }
 
